# yarm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: yarm.toml
examples/gitconfigs/: oss.gitconfig  personal.gitconfig  work.gitconfig
src/: config.rs  git.rs  main.rs  profile.rs  state.rs  term.rs
src/commands/: apply.rs  clone.rs  find.rs  init.rs  mod.rs  profiles.rs  scan.rs  stat.rs  status.rs
