[package]
name = "yarm"
version = "0.2.0"
edition = "2024"
description = "A small workflow utility for managing local git repositories. It handles git identity configuration via profiles and keeps track of repositories across directory pools."
repository = "https://github.com/dominiquefuchs/yarm"
readme = "README.md"
license = "MIT"
keywords = ["git", "cli", "profile", "repository", "identity"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "examples/"]

[lints.clippy]
pedantic = "warn"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"] }
clap_complete = "4.5"
console = "0.16.2"
dirs = "6.0.0"
indicatif = "0.18.3"
inquire = "0.9.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
bitcode = { version = "0.6", features = ["serde"] }
toml = "0.9"
globset = "0.4"
strsim = "0.11"

[profile.release]
lto = true
strip = true
codegen-units = 1
